@@ -1,3 +1,10 @@
+2010-09-16  Matthew Mundell <matthew.mundell@greenbone.net>
+
+	* src/gsad_omp.c (get_escalators_omp): Also get report formats.
+
+	* src/html/omp.xsl (html-create-escalator-form): Convert format field of
+	email escalator to content, with report selection.
+
 2010-09-14  Matthew Mundell <matthew.mundell@greenbone.net>
 
 	* src/html/omp.xsl (report_format [details]): Add active flag.
